--- a/docs/2.deploy-mysql-master-master-replication.md
+++ b/docs/2.deploy-mysql-master-master-replication.md
@@ -82,14 +82,13 @@ table-open-cache                = 2048
 default_storage_engine          = innodb
 innodb_autoinc_lock_mode        = 2
 innodb_flush_log_at_trx_commit  = 0
-innodb_buffer_pool_size         = 122M
+innodb_buffer_pool_size 	= 2G
 innodb_flush_log_at_trx_commit  = 0
 innodb_thread_concurrency       = 4
 innodb_flush_method             = O_DIRECT
 innodb-log-files-in-group       = 2
 innodb-log-file-size            = 32M
 innodb-file-per-table           = 1
-innodb-buffer-pool-size         = 8M
 
 symbolic-links                  = 0
 
@@ -151,14 +150,13 @@ table-open-cache                = 2048
 default_storage_engine          = innodb
 innodb_autoinc_lock_mode        = 2
 innodb_flush_log_at_trx_commit  = 0
-innodb_buffer_pool_size         = 122M
+innodb_buffer_pool_size 	= 2G
 innodb_flush_log_at_trx_commit  = 0
 innodb_thread_concurrency       = 4
 innodb_flush_method             = O_DIRECT
 innodb-log-files-in-group       = 2
 innodb-log-file-size            = 32M
 innodb-file-per-table           = 1
-innodb-buffer-pool-size         = 8M
 
 symbolic-links                  = 0
 
@@ -210,7 +208,7 @@ Enter password:
 Cho phép người dùng replicator được phép truy cập từ node2 với mật khẩu là 'Passw0rd' với chỉ thông tin replication slave
 
 ```
-mysql>grant replication slave on *.* to 'replicator''192.168.10.112' identified by 'Passw0rd';
+mysql>grant replication slave on *.* to 'replicator'@'192.168.10.112' identified by 'Passw0rd';
 mysql>flush privileges;
 ```
 
@@ -250,7 +248,7 @@ Enter password:
 Tạo user replicator mà cho phép truy cập từ node01 với mật khẩu là 'Passw0rd' với chỉ thông tin replication slave
 
 ```
-mysql>grant replication slave on *.* to 'replicator''192.168.10.111' identified by 'Passw0rd';
+mysql>grant replication slave on *.* to 'replicator'@'192.168.10.111' identified by 'Passw0rd';
 mysql>flush privileges;
 ```
 
@@ -280,7 +278,7 @@ Enter password:
 
 ```
 mysql>STOP SLAVE;
-mysql>CHANGE MASTER TO MASTER_HOST='192.168.10.111', MASTER_USER='replicator', MASTER_PASSWORD='P@ssw0rd', MASTER_PORT=3306, MASTER_LOG_FILE='mysql-bin.000002', MASTER_LOG_POS=875834797, MASTER_CONNECT_RETRY = 10;
+mysql>CHANGE MASTER TO MASTER_HOST='192.168.10.111', MASTER_USER='replicator', MASTER_PASSWORD='P@ssw0rd', MASTER_PORT=3306, MASTER_LOG_FILE='mysql-bin.000002', MASTER_LOG_POS=875834797, MASTER_CONNECT_RETRY = 60;
 mysql>START SLAVE;
 ```
 
@@ -363,7 +361,7 @@ Enter password:
 
 ```
 mysql>STOP SLAVE;
-mysql>CHANGE MASTER TO MASTER_HOST='192.168.10.112', MASTER_USER='replicator', MASTER_PASSWORD='P@ssw0rd', MASTER_PORT=3306, MASTER_LOG_FILE='mysql-bin.000002', MASTER_LOG_POS=1503, MASTER_CONNECT_RETRY = 10;
+mysql>CHANGE MASTER TO MASTER_HOST='192.168.10.112', MASTER_USER='replicator', MASTER_PASSWORD='P@ssw0rd', MASTER_PORT=3306, MASTER_LOG_FILE='mysql-bin.000002', MASTER_LOG_POS=1503, MASTER_CONNECT_RETRY = 60;
 mysql>START SLAVE;
 ```
 
