--- a/docs/2.deploy-mysql-master-master-replication.md
+++ b/docs/2.deploy-mysql-master-master-replication.md
@@ -1,3 +1,5 @@
+# Deploying mysql replication
+
 **Requirements**
 
 OS: CentOS 7
@@ -7,6 +9,8 @@ IP Addresses:
 - node01: 192.168.10.111
 
 - node02: 192.168.10.112
+
+## 1. Deploying mysql master master replication
 
 **Step1: Install mysql on 2 nodes**
 
@@ -165,7 +169,7 @@ log-error=/var/log/mysqld.log
 pid-file=/var/run/mysqld/mysqld.pid
 ```
 
-Diễn giải tệp cấu hình:
+**Diễn giải tệp cấu hình**:
 
 - server-id: nằm trong 1 to 2^32-1, và giá trị server-id giữa các server là duy nhất
 
@@ -183,9 +187,15 @@ Chúng ta có thể sử dụng tham số **binlog_do_db** để chỉ định r
 
 Vị trí mặc định của các tệp tin relay-log và relay-log-index nằm ở thư mục data /var/lib/mysql
 
-**Note:** Giải thích quá trình replication như sau:
+**Quá trình replication sẽ được thực hiện như sau**:
 
-Master sẽ lưu mọi thay đổi database của nó vào một file binlog và để đó (có thể cấu hình được các thông số như kích thước tối đa, thời gian lưu trên server). Slave sẽ truy vấn đến master và lấy thông tin từ binlog về, sau đó thực hiện đọc và ghi vào relay log. Cuối cùng Slave đọc relay log và cập nhật các event trong đó. Kết thúc quá trình Replication.
+- Step1: Master sẽ lưu mọi thay đổi database của nó vào một file binlog qua một `dump thread`.
+
+- Step2: Master sử dụng `dump thread` để gửi nội dung đến tiến trình tiến trình `Slave_IO` (IO Thread) của slave và IO Thread thực hiện lấy thông tin từ  binlog về và ghi vào một tệp relay log.
+
+- Step3: Slave đọc thông tin từ relay log và cập nhật các thay đổi vào slave qua tiến trình `Slave_SQL` (SQL Thread).
+
+- Kết thúc quá trình Replication.
 
 **Step4: Start mysql server on 2 nodes**
 
@@ -510,9 +520,10 @@ Executed_Gtid_Set:
 1 row in set (0,00 sec)
 ```
 
+## 2. Scaling mysql replication
+
+
+
 **Read more>**
 
 [https://dev.mysql.com/doc/refman/8.0/en/show.html](https://dev.mysql.com/doc/refman/8.0/en/show.html)
-
-
-
