--- a/docs/1.mysql-cheatsheet-for-me.md
+++ b/docs/1.mysql-cheatsheet-for-me.md
@@ -197,3 +197,9 @@ ex: count tất cả row trong tables users của hacker database
 **Count records for all tables**
 
 `SELECT SUM(TABLE_ROWS) FROM INFORMATION_SCHEMA.TABLES WHERE TABLE_SCHEMA='database-name';`
+
+**Count ignore duplicate rows**
+
+Sử dụng `distinct` để bỏ qua row duplicate khi count
+
+syntax: `select count(distinct express) from dbname.tablename;`
