--- a/docs/3.system-administration.md
+++ b/docs/3.system-administration.md
@@ -61,8 +61,15 @@ FROM information_schema.TABLES
 WHERE table_schema = "vnn"
 ORDER BY (data_length + index_length) DESC;
 ```
-
 Thay vnn với tên database cần query
+
+- Show size của một column trong một table
+
+`SELECT sum(char_length(COLUMN_NAME)) FROM TABLE_NAME;`
+
+EX:
+
+`SELECT sum(char_length(username))/1024/1024 FROM users;`
 
 - Ngoài ra, có thể xem kích thước bằng dung lượng trên disk
 
@@ -190,6 +197,18 @@ Restart mysql service
 
 `systemctl restart mysqld`
 
+Hoặc nếu không cần sửa thông tin tệp cấu hình thì thiết lập biến global với thông tin sau:
+
+```
+mysql -u root -p
+>SET global general_log_file='/var/log/mysql/mysql.log'; 
+>SET global log_output = 'file';
+>SET global general_log = on;
+```
+Để disable log thì thực hiện lệnh sau:
+
+`SET global general_log = off;`
+
 - Slow Query Log
 
 Ghi lại những thông tin SQL mà time để query mất nhiều thời gian (mặc định là 10s)
@@ -229,6 +248,22 @@ sudo chown -R mysql:mysql /var/log/mysql/slow-query.log
 **Restart mysql/mariadb**
 
 `sudo systemctl restart mysqld`
+
+**Note**
+
+Nếu chỉ enable tạm cho slow query log thì có thể enable bằng cách set global variables như sau:
+
+```
+mysql -u root -p
+>SET GLOBAL slow_query_log = 'ON';
+>SET GLOBAL long_query_time = X;
+>SET GLOBAL slow_query_log_file = '/path/filename';
+```
+Trong đó: `X` là được thời gian được thiết lập tính tính bằng giây để ghi nhận query thực hiện lâu hơn khoảng thời gian đó.
+
+Để Disable slow query thì thực hiện
+
+`>SET GLOBAL slow_query_log = 'OFF';`
 
 **Xem, phân tích thông tin slow query log**
 
