--- a/docs/3.system-administration.md
+++ b/docs/3.system-administration.md
@@ -111,7 +111,7 @@ Các quyền có sẵn như sau:
 
 | Privilege    | Description                                                                |
 |--------------|----------------------------------------------------------------------------|
-| ALL          | Cho phép tất cả quyền trên một DB (không gồm quyền xóa db)                 |
+| ALL          | Cho phép tất cả quyền trên một DB (không gồm quyền gán)                 |
 | SELECT       | Cho phép người dùng select dữ liệu các tables trong một database           |
 | INSERT       | Cho phép người dùng insert rows trong tables                               |
 | UPDATE       | Cho phép người dùng update rows trong tables                               |
