--- a/docs/3.system-administration.md
+++ b/docs/3.system-administration.md
@@ -164,7 +164,27 @@ MariaDB [(none)]> SHOW GRANTS FOR 'hieunm'@'192.168.1.%';
 
 MariaDB [(none)]> SHOW GRANTS FOR 'hieunm'@'192.168.1.%';
 ```
-   
+**Delete tài khoản người dùng hoặc quyền đã gán**
+
+- Revoke quyền đã gán từ một tài khoản
+
+`REVOKE PRIVILEGE ON db_name.* FROM 'db_user'@'host';
+
+or revoke all privileges
+
+`REVOKE ALL PRIVILEGES ON db_name.* FROM 'db_user'@'host';`
+
+ex:
+
+```
+MariaDB>REVOKE DROP ON db01.* FROM 'hieunm'@'192.168.1.%';
+MariaDB>REVOKE ALL PRIVILEGES ON db02.* FROM 'tiennx'@'192.168.1.%';
+```
+
+- Remove tài khoản người dùng
+
+`DROP USER 'username'@'host';
+
 ## Tối ưu MySQL Query Cache
 
 Kích hoạt chế độ cache MySQL Query để tăng khả năng truy vấn database mysql
