--- a/docs/1.mysql-cheatsheet-for-me.md
+++ b/docs/1.mysql-cheatsheet-for-me.md
@@ -6,7 +6,26 @@ syntax:
 
 `mysql>CREATE DATABASE IF NOT EXISTS DB_NAME CHARACTER SET 'utf8' COLLATE 'utf8_unicode_ci'`
 
-**Create table**
+**Changing the database collation**
+
+`ALTER DATABASE <yourDB> CHARACTER SET <charset> COLLATE <collation>`
+
+**Changing table collation**
+
+```
+SELECT CONCAT('ALTER TABLE `',  table_name, '` CHARACTER SET <charset> COLLATE <collation>;')
+FROM information_schema.TABLES AS T, information_schema.`COLLATION_CHARACTER_SET_APPLICABILITY` AS C
+WHERE C.collation_name = T.table_collation
+AND T.table_schema = '<yourDB>'
+AND
+(
+    C.CHARACTER_SET_NAME != '<charset>'
+    OR
+    C.COLLATION_NAME != '<collation>'
+);
+```
+
+**Create a table**
 
 syntax:
 
