--- a/docs/4.backup-restore.md
+++ b/docs/4.backup-restore.md
@@ -82,7 +82,7 @@ Sử dụng gzip để nén dữ liệu sao lưu
 
 - Incremental Backups với tùy chọn Binary Log
 
-Việc thực hiện backup full với database có dung lượng lớn sẽ mất nhiều thời gian, vì vậy mà chúng ta lập kế hoạch để sao lưu dữ liệu thay đổi sao khi thực hiện backup full.
+Việc thực hiện backup full với database có dung lượng lớn sẽ mất nhiều thời gian, vì vậy mà chúng ta lập kế hoạch để sao lưu dữ liệu thay đổi sau khi thực hiện backup full.
 
 Binary log là tệp tin mà lưu trữ tất cả quá trình thực hiện query database khi thực hiện alter hoặc create bản ghi mới. Binary log được sử dụng trong trường hợp replication database mà cho phép slave đồng bộ dữ liệu từ master server. Ngoài ra, binary log còn được sử dụng trong như một phương pháp trong quá trình backup database mà cho phép thực hiện nhanh và hiệu quả hơn khi phải thực hiện full backup.
 
@@ -198,6 +198,35 @@ Incremental backup
 xtrabackup --host=database-server -P port-mysql -u user-name -p \
 --backup --target-dir=/path/to/inc1-dir/ --incremental-basedir=/path/to/full-dir/ --datadir=/var/lib/mysql/
 ```
+
+### Export a table into csv file
+
+**Example**:
+`SELECT * FROM example.callcenter INTO OUTFILE "callcenter.csv" FIELDS TERMINATED BY ',' LINES TERMINATED BY "\n";`
+
+Trong đó: `FIELDS TERMINATED BY ','` được sử dụng cho ngắt các field, `LINES TERMINATED BY "\n"` được sử dụng cho ngắt các dòng trong tệp tin csv, có thể sử dụng thêm `ENCLOSED BY '"'` để đóng giá mỗi field trong cặp nháy kép `"`
+
+Ngoài ra, có thể export với một số column tùy chọn, cùng với điều kiện kiện `where`
+
+### Import file csv into a table
+
+Để import file csv vào một table, yêu cầu file csv có dữ liệu đúng số lượng column và kiểu dữ liệu của table
+
+Ví dụ import dữ liệu trong tệp `callcenter.csv` vào table `callcenter`
+
+`LOAD DATA LOCAL INFILE '/path/to/callcenter.csv' INTO TABLE callcenter  FIELDS TERMINATED BY ',' LINES TERMINATED BY '\n';`
+
+### Import file csv into some columns
+
+Trong trường hợp chỉ cần import một số column của file csv vào một số field của table thì thực hiện import theo vị trị column,ví dụ như sau:
+
+`LOAD DATA LOCAL INFILE 'callcenter.csv' INTO TABLE callcenter  FIELDS TERMINATED BY ',' LINES TERMINATED BY '\n' (@col1,@col2,@col3,@col4,@col5,@col6,@col7,@col8) set phone=@col2,src=@col3,type=@col5;`
+
+Trong đó:
+
+- @col2,@col3,@col5 là vị trí thứ column 2,3,5 trong tệp callcenter.csv.
+
+- `phone,src,type` là một số trường trong table callcenter và được set với giá trị thứ tự tương ứng các column 2,3,5
 
 ## 5. Backup with replication options
 
