--- a/docs/6.mysql-partitioning.md
+++ b/docs/6.mysql-partitioning.md
@@ -6,7 +6,7 @@ Partition là việc chia dữ liệu từ table đơn với một tệp dữ li
 
 **Một số ưu điểm của partition**
 
-- Cho phép lưu được nhiều dữ liệu hơn vào một table khi partition khi so sánh với việc lưu trữ dữ liệu table vào một tệp tin hoặc một disk đơn.
+- Cho phép lưu được nhiều dữ liệu hơn vào một table khi partition khi so sánh với việc lưu trữ dữ liệu table vào một tệp tin hoặc một disk đơn. Nghĩa là dữ liệu partition có thể lưu trữ ở nhiều disk vật lý khác nhau.
 
 - Việc query có thể tối ưu hơn khi thực hiện query dữ liệu trên một hoặc một vài partition thay vì phải query toàn bộ dữ liệu table.
 
@@ -22,7 +22,7 @@ Toán tử số học và logic:
 
 - Toán tử +, - , * được phép sử dụng trong partition tuy nhiên kết quả phải là integer hoặc NULL (ngoại trừ sử dụng kiểu KEY partitioning).
 
-- Toán tử `DIV` được hỗ trợ nhưng toán tử  / không được phép.
+- Toán tử `DIV` được hỗ trợ nhưng toán tử  `/` không được phép.
 
 - Các toán tử |, &, ^, <<, >>, and ~ không được phép sử dụng trong các biểu thức partition.
 
@@ -188,7 +188,7 @@ ALTER TABLE crm_realtime REORGANIZE PARTITION p6 INTO ( PARTITION p202008 VALUES
 `ALTER TABLE table-name REMOVE PARTITIONING;`
 
 
-# III. How to use
+# IV. How to use
 
 - Show thông tin dữ liệu trong một partition được chỉ định
 
