--- a/docs/2.deploy-mysql-master-master-replication.md
+++ b/docs/2.deploy-mysql-master-master-replication.md
@@ -288,7 +288,7 @@ Enter password:
 
 ```
 mysql>STOP SLAVE;
-mysql>CHANGE MASTER TO MASTER_HOST='192.168.10.111', MASTER_USER='replicator', MASTER_PASSWORD='P@ssw0rd', MASTER_PORT=3306, MASTER_LOG_FILE='mysql-bin.000002', MASTER_LOG_POS=875834797, MASTER_CONNECT_RETRY = 60;
+mysql>CHANGE MASTER TO MASTER_HOST='192.168.10.111', MASTER_USER='replicator', MASTER_PASSWORD='Passw0rd', MASTER_PORT=3306, MASTER_LOG_FILE='mysql-bin.000002', MASTER_LOG_POS=875834797, MASTER_CONNECT_RETRY = 60;
 mysql>START SLAVE;
 ```
 
@@ -371,7 +371,7 @@ Enter password:
 
 ```
 mysql>STOP SLAVE;
-mysql>CHANGE MASTER TO MASTER_HOST='192.168.10.112', MASTER_USER='replicator', MASTER_PASSWORD='P@ssw0rd', MASTER_PORT=3306, MASTER_LOG_FILE='mysql-bin.000002', MASTER_LOG_POS=1503, MASTER_CONNECT_RETRY = 60;
+mysql>CHANGE MASTER TO MASTER_HOST='192.168.10.112', MASTER_USER='replicator', MASTER_PASSWORD='Passw0rd', MASTER_PORT=3306, MASTER_LOG_FILE='mysql-bin.000002', MASTER_LOG_POS=1503, MASTER_CONNECT_RETRY = 60;
 mysql>START SLAVE;
 ```
 
