--- a/docs/3.system-administration.md
+++ b/docs/3.system-administration.md
@@ -272,6 +272,28 @@ mysql -u root -p
 
 `SET global general_log = off;`
 
+- Error log
+
+Check xem log-error đã enable chưa
+
+`>show global variables like 'log_error';`
+
+Variable 'log_error' is a read only variable, vì vậy cần set log_error trong tệp cấu hình
+
+Sửa tệp cấu hình mysql/mariadb và thêm vào nội dung sau:
+
+```
+log_error=/var/log/mysql/mariadbd.err
+```
+Gán quyền cho mysql user trên tệp general log file
+
+`mkdir -p /var/log/mysql && chown -R mysql:mysql /var/log/mysql && chmod 640 /var/log/mysql/mariadbd.err`
+
+Restart mysql service
+
+`systemctl restart mysqld`
+
+
 - Slow Query Log
 
 Ghi lại những thông tin SQL mà time để query mất nhiều thời gian (mặc định là 10s)
