--- a/docs/4.backup-restore.md
+++ b/docs/4.backup-restore.md
@@ -52,33 +52,45 @@ Syntax:
 
 Trong đó:
 
->user-name là tên người dùng được phép thực thực backup database
+>user-name là tên người dùng được phép thực hiện backup database
 >db-name là tên database cần được backup
 >--opt là giá trị tùy chọn cho mysqldump
  
 - Backup full database
 
-`mysqldump -u root -p --all-databases >/path/to/backup-full.sql`
+`mysqldump -u username -p --all-databases >/path/to/backup-full.sql`
 
 - Backup với một số database nhất định
 
-`mysqldump -u root -p --databases db01-name db02-name db03-name >/path/to/specify-databases.sql`
+`mysqldump -u username -p --databases db01-name db02-name db03-name >/path/to/specify-databases.sql`
 
 - Backup một số bảng trong một database
 
-`mysqldump -u root -p db-name tb01-name tb02-name >/path/to/any-tables.sql`
+`mysqldump -u username -p db-name tb01-name tb02-name >/path/to/any-tables.sql`
 
 - Chỉ backup schema (structure), không bao gồm data
 
 Sử dụng flag --no-data
 
-`mysqldump -u root -p --no-data db-name >/path/to/db-name.sql`
+`mysqldump -u username -p --no-data db-name >/path/to/db-name.sql`
 
 - Backup with compress
 
 Sử dụng gzip để nén dữ liệu sao lưu
 
-`mysqldump -u root -p db-name |gzip >/path/to/backup-compress.sql.gz`
+`mysqldump -u username -p db-name |gzip >/path/to/backup-compress.sql.gz`
+
+- Backup a single database without locking the tables
+
+`mysqldump -u username -p --single-transaction --skip-lock-tables db-name > db-name.sql`
+
+- Dump the first 1000 lines of a single database
+
+`mysqldump -u username -p db-name table-name --where="1 limit 1000" > db-name.sql`
+
+- Dump data with query last days
+
+`mysqldump -u username -p db-name table-name --where='updated_at > "2022-09-01"' > data-last-days.sql`
 
 - Incremental Backups với tùy chọn Binary Log
 
@@ -234,6 +246,36 @@ Trong đó:
 
 Trong trường hợp slave xảy ra lỗi kết nối với master trong replication như Slave_IO hoặc Slave_Thread không chạy. Khi đó, một số trường hợp yêu cầu phải dump database từ master với một số tùy chọn (trong đó cần lấy thông tin log-bin và log-pos).
 
+## 6. Duplicate a table
+
+Trong trường hợp cần clone/duplicate một table, có thể thực hiện với các trường hợp sau:
+
+Trong các trường hợp sau, thực hiện clone/duplicate table A to A-copy của database DB-A
+
+- Copy table only data and structure (không gồm indexes)
+
+`CREATE TABLE A-copy SELECT * FROM A;`
+
+- Copy table only structure and indexes (không gồm data)
+
+`CREATE TABLE A-copy LIKE A;`
+
+- Copy full table (gồm structure, data, indexes, triggers, ..)
+
+```
+CREATE TABLE A-copy LIKE A; 
+INSERT A-copy SELECT * FROM A;
+```
+
+- Copy table from a database to another database
+
+Ví dụ copy từ table DB-A.A đến table DB-B.A-copy
+
+```
+CREATE TABLE DB-B.A-copy LIKE DB-A.A;
+INSERT DB-B.A-copy
+SELECT * FROM DB-A.A;
+```
 
 **Read more>**
 
